Modify dates insertion way in functionsManagement interface.